--- a/less/style.less
+++ b/less/style.less
@@ -49,3 +49,8 @@
 /*----- Footer -----*/
 @import "footer";
 /*-----end Footer -----*/
+
+/*---- media -----*/
+@media (max-width: 576px) {
+	@import "media";
+}
