--- a/less/container.less
+++ b/less/container.less
@@ -1,7 +1,9 @@
+//out:false
+
 @import url(variable.less);
 
 .container {
-    width: 100%;
-    max-width: @width;
-    margin: 0 auto;
+	width: 100%;
+	max-width: @width;
+	margin: 0 auto;
 }
