--- a/less/mixin.less
+++ b/less/mixin.less
@@ -1,5 +1,7 @@
+//out:false
+
 .text (@font: 'raleway', 'arial', sans-serif; @weight: 400; @size: 14px) {
-    font-family: @font;
-    font-weight: @weight;
-    font-size: @size;
+	font-family: @font;
+	font-weight: @weight;
+	font-size: @size;
 }
