--- a/css/style.css
+++ b/css/style.css
@@ -1442,7 +1442,7 @@
     width: 100%;
     height: 7px;
     background-color: #ffffff;
-    transition-duration: 0.25s;
+    transition-duration: .25s;
   }
   .page-header-top-menu-icon::after {
     top: -18px;
@@ -1465,15 +1465,20 @@
   .page-header-top-menu-checkbox:checked ~ .page-header-top-menu-list {
     height: auto;
     visibility: visible;
+    margin-top: 20px;
   }
-  .page-header-top-menu-checkbox:checked ~ .page-header-top-menu-icon {
+  .page-header-top-menu-checkbox:checked ~ .page-header-top-menu-btn .page-header-top-menu-icon {
+    background: transparent;
+  }
+  .page-header-top-menu-checkbox:checked ~ .page-header-top-menu-btn .page-header-top-menu-icon::before,
+  .page-header-top-menu-checkbox:checked ~ .page-header-top-menu-btn .page-header-top-menu-icon::after {
+    top: 0;
+  }
+  .page-header-top-menu-checkbox:checked ~ .page-header-top-menu-btn .page-header-top-menu-icon::after {
+    transform: rotate(-45deg);
+  }
+  .page-header-top-menu-checkbox:checked ~ .page-header-top-menu-btn .page-header-top-menu-icon::before {
     transform: rotate(45deg);
-  }
-  .page-header-top-menu-checkbox:checked ~ .page-header-top-menu-icon::before {
-    transform: rotate(0);
-  }
-  .page-header-top-menu-checkbox:checked ~ .page-header-top-menu-icon::after {
-    transform: rotate(90deg);
   }
   .instruments {
     padding: 11px 0 30px 0;
