--- a/less/media.less
+++ b/less/media.less
@@ -57,7 +57,7 @@
 					width: 100%;
 					height: 7px;
 					background-color: #ffffff;
-					transition-duration: 0.25s;
+					transition-duration: .25s;
 				}
 
 				&::after {
@@ -83,25 +83,40 @@
 				}
 			}
 
-			&-checkbox:checked~&-list {
-				height: auto;
-				visibility: visible;
-			}
+			&-checkbox {
 
-			&-checkbox:checked~&-icon {
-				transform: rotate(45deg);
-			}
+				&:checked {
+					~.page-header-top-menu {
+						&-list {
+							height: auto;
+							visibility: visible;
+							margin-top: 20px;
+						}
 
-			&-checkbox:checked~&-icon::before {
-				transform: rotate(0);
-			}
+						&-btn {
+							.page-header-top-menu-icon {
 
-			&-checkbox:checked~&-icon::after {
-				transform: rotate(90deg);
+								background: transparent;
+
+								&::before,
+								&::after {
+									top: 0;
+								}
+
+								&::after {
+									transform: rotate(-45deg);
+								}
+
+								&::before {
+									transform: rotate(45deg);
+								}
+							}
+						}
+					}
+				}
 			}
 		}
 	}
-
 }
 
 .instruments {
